hc::faq: Remove non-set mirror and minor cleanup

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -558,7 +558,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 
     <p>You can view all the plugins of that repository here <a href="/plugins/">Styx additional plugins</a>.</p>
 
-    <p>Nowadays this plugin is already installed and activated by default.<br>To install the plugin on your Serendipity Installation, follow these instructions:</p>
+    <p>Nowadays this plugin is already installed and activated by default.<br>Anyway, to install the plugin on your Serendipity Installation, follow these instructions:</p>
 
     <ol class="styx-counter">
         <li>After installation, you go to your Serendipity admin interface.</li>
@@ -570,11 +570,11 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
         <li>After you have done that you will see the configuration screen of that plugin. You can leave all settings as-is. If you later have any troubles with plugin downloads you might want to play with the settings offered there.</li>
     </ol>
 
-        <p>Now the spartacus plugin is activated and will fetch a list of plugins the next time you choose to install a plugin. So go to the plugin manager again, click on the “Install event plugins” link again. Now Spartacus should fetch plugins from the remote repository and display them to you.</p>
+    <p>Now the spartacus plugin is activated and will fetch a list of plugins the next time you choose to install a plugin. So go to the plugin manager again, click on the “Install event plugins” link again. Now Spartacus should fetch plugins from the remote repository and display them to you.</p>
 
-        <p>If you get any network errors or download failures, either the repository mirror servers (SourceForge.net or the default GitHub.com) are down. Or your server might be firewalled and does not allow outgoing connections, in which case you’ll need to talk with your provider about this.</p>
+    <p>If you get any network errors or download failures, either the repository mirror servers (currently GitHub.com, using "raw.githubusercontent.com" only) are down. Or your server might be firewalled and does not allow outgoing connections, in which case you’ll need to talk with your provider about this.</p>
 
-        <p>Now you can click on any plugin to fetch it; The shortname, plugin-version and short description is hidden in the clickable arrow info box underneath the title.</p>
+    <p>Now you can click on any plugin to fetch it; The shortname, plugin-version and short description is hidden in the clickable arrow info box underneath the title.</p>
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
