--- a/book/index.html
+++ b/book/index.html
@@ -56034,6 +56034,40 @@ Konfigurationsdateien <code>serendipity_config_local.inc.php</code> und <code>.h
 
 </article>
 
+<article id="XU10917" class="subsub">
+
+<header>
+    <h4 class="subarticle" id="7-update-der-deployments">7. Update der Deployments<a class="anchorjs-link" href="#7-update-der-deployments" aria-label="Anchor" data-anchorjs-icon=""></a></h4>
+</header>
+
+<p>Alle Deployments können sich selbst mittels des <code>serendipity_event_autoupdate</code> Plugins
+in vollständig eigenständige Blog Installationen umwandeln. Dazu muss nur der Upgrade Prozeß aus den
+jeweiligen Shared Installationen gestartet werden, und jedes dieser ehemals beschränkten Deployments
+wird eine vollständige Kopie der neuen Serendipity Version erhalten.</p>
+
+<p>Als Anbieter von s9y-Blogs für Ihre Benutzer sollten Sie die Blogs der Benutzer aber selbst migrieren.
+Dazu ist es am besten, wenn Sie immer ein "Ersatz"-Test-Blog genau wie die Blogs Ihrer Benutzer installiert
+haben.</p>
+
+<p>Öffnen Sie diese Installation und sehen Sie sich den Upgrader an. Führen Sie ihn aus und überprüfen
+Sie, ob er ohne Fehler abgeschlossen wurde und ob eventuell spätere Nachfolgearbeiten anstehen.
+Wenn dies der Fall ist, und Sie sich und alle weiteren abhängigen Blogs hinter einen sicheren
+Vorhang begeben haben (<code>.htaccess</code> auth login lock), sollten Sie eine Liste ALLER von s9y verwalteten
+Blogs etwa wie folgt durchlaufen:</p>
+
+<pre><code>&lt;?php<br>
+$sql = mysqli_query($mysqli, 'SELECT url FROM my_managed_s9y_blogs');<br>
+while ($row = mysqli_fetch_array($sql, MYSQLI_ASSOC)) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;$fp = fopen($row['url'] . 'serendipity_admin.php?serendipity[action]=upgrade');</br>
+}<br>
+?&gt;</code></pre>
+
+<p>Über die jeweilige <code>serendipity_admin.php</code>-URL können diese Deployments verwaltet werden.
+Im Grunde genommen müssen Sie dieses Skript also nur für jeden von s9y betriebenen Blog aufrufen, den
+Sie hosten und den Upgrade Prozeß für diesen abschließen.</p>
+
+</article>
+
 </section><!-- section.sub end -->
 
 <section id="U1092" class="sub">
