book: Improve 80924c60dff4e26ce053a5ae9d0fd62e8b86aa67

--- a/book/index.html
+++ b/book/index.html
@@ -56053,8 +56053,8 @@ des Upgrades statt in den Deployment Ordner in das Kern-Verzeichnis hinein kopie
 Art Teil-Update erhält. Wenn sich nun in diesem Teil etwas geändert hat und Bezug auf eine andere
 Kernkomponente (zB. eine neue Sprachkonstante) nimmt, kann eine andere, noch nicht upgedate
 Deployment-Installation zu Fehlern führen, da sie dann unter Umständen die neuen Template Dateien
-bereits nutzt aber selbst (bzw. ihr Kerns-System) noch nicht über das eigentliche Kern Update (bzw. die
-neue Sprachkonstante) verfügt.</p>
+bereits nutzt, aber selbst (bzw. ihr Shared-Kerns-System) noch nicht über das eigentliche Kern Update
+(bzw. die neue Sprachkonstante) verfügt.</p>
 
 <p>Sie sehen also, es ist verzwickt. Entweder muss ein einzelnes Deployment-Upgrade verhindert werden,
 oder man geht damit das enthaltene Risiko einer potentiellen Fehlermeldung oder gar Unererreichbarkeit
