book: Improve 80924c60dff4e26ce053a5ae9d0fd62e8b86aa67 again

--- a/book/index.html
+++ b/book/index.html
@@ -56062,7 +56062,8 @@ eines bestimmten Teils für die anderen Deployments ein, bis Sie selbst als Betr
 werden bzw. die Möglichkeit haben zu reagieren. Für eine Verhinderung im Vorwege gibt es leider noch kein
 schlüssiges und allgemeines Konzept. Oder es muss kommuniziert werden auf ein Deployment Upgrade für die
 einzelnen Blogs zu verzichten. Allerdings kann dies durchaus geschehen, wenn im Vorwege aus den Symlink
-Ordnern eigenständige Ordner gemacht werden.</p>
+Ordnern eigenständige Ordner gemacht wurden. (Achten Sie dabei aber darauf nicht ausversehen den Ziel
+Ordner der Shared Installation zu löschen!)</p>
 
 <p>Als Anbieter von s9y-Blogs für Ihre Benutzer sollten Sie die Blogs der Benutzer daher selbst migrieren.
 Dazu ist es am besten, wenn Sie immer ein "Ersatz"-Test-Blog genau wie die Blogs Ihrer Benutzer installiert
