--- a/book/index.html
+++ b/book/index.html
@@ -56051,7 +56051,7 @@ und ihren Pfad verbleiben aber die zuvor als Symlink erstellten symbolischen Ver
 Das Upgrade der einzelnen Deployment Installation wird dann die potentiell neueren (zB. Template) Vorlagen
 des Upgrades statt in den Deployment Ordner in das Kern-Verzeichnis hinein kopieren - das damit eine
 Art Teil-Update erhält. Wenn sich nun in diesem Teil etwas geändert hat und Bezug auf eine andere
-Kernkomponente (zB. eine neue Sprachkonstante) nimmt, kann eine andere, noch nicht upgedate
+Kernkomponente (zB. eine neue Sprachkonstante) nimmt, kann eine andere, noch nicht upgedatete
 Deployment-Installation zu Fehlern führen, da sie dann unter Umständen die neuen Template Dateien
 bereits nutzt, aber selbst (bzw. ihr Shared-Kerns-System) noch nicht über das eigentliche Kern Update
 (bzw. die neue Sprachkonstante) verfügt.</p>
