--- a/book/index.html
+++ b/book/index.html
@@ -56060,10 +56060,10 @@ bereits nutzt, aber selbst (bzw. ihr Shared-Kerns-System) noch nicht über das e
 oder man geht damit das enthaltene Risiko einer potentiellen Fehlermeldung oder gar Unerreichbarkeit
 eines bestimmten Teils für die anderen Deployments ein, bis Sie selbst als Betreiber darauf hingewiesen
 werden bzw. die Möglichkeit haben zu reagieren. Für eine Verhinderung im Vorwege gibt es leider noch kein
-schlüssiges und allgemeines Konzept. Oder es muss kommuniziert werden auf ein Deployment Upgrade für die
-einzelnen Blogs zu verzichten. Allerdings kann dies durchaus geschehen, wenn im Vorwege aus den Symlink
-Ordnern eigenständige Ordner gemacht wurden. (Achten Sie dabei aber darauf nicht ausversehen den Ziel
-Ordner der Shared Installation zu löschen!)</p>
+schlüssiges und allgemeines Konzept. Oder es muss klar und eindeutig kommuniziert werden auf ein Deployment
+Upgrade durch die einzelnen Blogs zu verzichten. Allerdings kann dies aber durchaus doch geschehen, wenn
+im Vorwege aus den Symlink Ordnern eigenständige Ordner gemacht wurden. (Achten Sie dabei aber darauf,
+dass nicht ausversehen der Ziel Ordner der Shared Installation gelöscht wird, wenn Sie den Symlink entfernen!)</p>
 
 <p>Als Anbieter von s9y-Blogs für Ihre Benutzer sollten Sie die Blogs der Benutzer daher selbst migrieren.
 Dazu ist es am besten, wenn Sie immer ein "Ersatz"-Test-Blog genau wie die Blogs Ihrer Benutzer installiert
