--- a/book/index.html
+++ b/book/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Serendipity Styx Edition - Styx Book | Styx is what Serendipity should be | ophian.github.io</title>
     <meta name="description" content="Serendipity Styx Edition - Das Buch, Individuelle Weblogs für Einsteiger und Profis">
-    <meta name="keywords" content="Serendipity Blog, Serendipity Styx, Serendipity Next, Serendipity Styx Edition, Styx Book, Styx Buch, The Book, Das Buch, Serendipity Book, Serendipity Buch, Individuelle Weblogs für Einsteiger und Profis, Styx is what Serendipity should be">
+    <meta name="keywords" content="Serendipity, Serendipity Blog, Serendipity Styx, Serendipity Next, Serendipity Styx Edition, Styx Book, Styx Buch, Serendipity The Book, Serendipity Das Buch, Serendipity Book, Serendipity Buch, Individuelle Weblogs für Einsteiger und Profis, Styx is what Serendipity should be">
 
     <meta property="og:title" content="Serendipity Styx Edition - Styx Book | Styx is what Serendipity should be | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
