site::hc: Add missing meta keywords

--- a/hc/en/index.html
+++ b/hc/en/index.html
@@ -4,6 +4,7 @@
     <title>Serendipity Styx Edition - Help Center [en] | ophian.github.io</title>
     <meta charset="UTF-8">
     <meta name="description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
+    <meta name="keywords" content="Serendipity, Serendipity Blog, Serendipity Weblog, Serendipity Styx, Serendipity Next, Serendipity Styx blog, Serendipity Styx Help Center, Serendipity Styx Edition, Styx is what Serendipity should be">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Serendipity Styx Edition - Help Center [en] | Styx is what Serendipity should be | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
