book: Improve 7884805b4b89eedcb8cfaebe311d1216c16179c9 for docs dir

--- a/book/index.html
+++ b/book/index.html
@@ -55968,8 +55968,8 @@ erstellt werden.</p>
 <pre><code class="bash">
 mklink /D "C:\xampp\htdocs\bikeshare\ebike\docs" "C:\xampp\htdocs\bikeshare\styx\docs"
 </code></pre>
-damit Sie im Deployment unter Wartung auf das ChangeLog File von Serendipity Styx zugreifen können.
-</p>
+für das <code>docs</code> Verzeichnis, damit Sie im Deployment unter "<em>Wartung</em>" auf das ChangeLog
+File von Serendipity Styx zugreifen können.</p>
 
 <p>Dito für eventuelle weitere, "angemeckerte" Zugriffsbeschränkungen die außerhalb der bereits
 definierten Ordnerpfade für Ihr Deployment liegen.</p>
