hc::shared-installation: Return deployment into indepent installation

--- a/hc/en/shared-installation.html
+++ b/hc/en/shared-installation.html
@@ -207,6 +207,8 @@ sql&gt; INSERT INTO my_managed_s9y_blogs (url) VALUES ('http://tom.s9yblogs.org/
 
 <p>Now every user can manage his/her blog just as if it were a standalone installation.</p>
 
+<p>Up from <strong>Serendipity Styx 3.9.0</strong> - which fixes issues with tokenized installs - and singular users deployment updates via the autoupdate event plugin (v.1.9.0+) the 2 possible symlink'ed directories <code>docs</code> and <code>templates</code> will return into independent install dirs, assuming there are no others (see the Book :: Chapter 10 :: Shared installations). This turns a deployment install into an independent and fully fletched Serendipity installation.</p>
+
 <h3 id="docs-special-notes">Special Notes</h3>
 
 <ul>
