book: Fixup Security Reports

--- a/book/index.html
+++ b/book/index.html
@@ -51778,17 +51778,22 @@ unsere Entwickler werden dies dann selbständig als Bug-Issues im System eintrag
 <p>Ein <span class="mbold">Security Issue</span> ist in unserem Code?
 Das ist schlimm, aber passiert nur alle Jahre einmal.
 Wir bitten Sie darum, Ihre <span class="mbold">security reports</span> via
-E-mail an den Maintainer Garvin Hicking (blog AT garv PUNKT in) zu schicken,
-damit dieser das Issue zuweisen und die Koordination eines verantwortlichen
-<em>Disclosures</em> zusammen mit Ihnen abstimmen kann. Das Team gibt immer den
-Dank an die Person zurück, die uns solch einen Bug oder ein solches Sicherheitsloch
-meldet. Wir reagieren meist innerhalb von 24 Stunden nachdem Sie mit uns in Kontakt
+E-mail an den Maintainer zu schicken, damit dieser das Issue zuweisen und die
+Koordination eines verantwortlichen <em>Disclosures</em> zusammen mit Ihnen
+abstimmen kann. Das Team gibt immer den Dank an die Person zurück, die uns
+olch einen Bug oder ein solches Sicherheitsloch meldet.
+Wir reagieren meist innerhalb von 24 Stunden nachdem Sie mit uns in Kontakt
 getreten sind und sprechen mit Ihnen detailliert den weiteren Vorgang ab.</p>
 
-<p>Wenn Sie es vorziehen, können Sie ein GitHub Security Issue aufmachen,
-in dem sie uns Informationen hinterlassen, wie wir Sie erreichen können,
-um Näheres zu erfahren. Bitte halten Sie eventuelle Informationen über das gefundene
-<em>“Loch”</em> nur sehr allgemein, da dies ein öffentlich zugänglicher Bereich ist.</p>
+<p>Wenn Sie es vorziehen, und ist im Falle von Styx die einzig praktikable Methode,
+können Sie ein <a href="https://github.com/ophian/styx/security/advisories/new">GitHub Styx Security Issue</a> aufmachen,
+nicht zu verwechseln mit den normalen issue bugfix trackern, welches Ihre Security Meldung
+als Entwurf an den Maintainer sendet, und welche, solange nicht von diesem veröffentlicht,
+nur ihm selbst und weiteren bestimmten Mitstreitern zugänglich ist.
+Sie sollten uns also Informationen hinterlassen, wie wir Sie eventuell erreichen können,
+um Weteres zu erfahren. Bitte halten Sie die Informationen über das gefundene
+<em>“Loch”</em> möglichst genau, damit schnell die Ursache - möglichst anhand eines
+allgemeinen Beispieles - gefunden und gefixt werden kann.</p>
 
 <section id="U1071" class="sub">
 <span class="u-toc">10.7.1 - Freier Zugriff</span>
