book: Fix typo in 7082bf92c465ccbc7db57f7c2e5af78227b18fce

--- a/book/index.html
+++ b/book/index.html
@@ -51791,7 +51791,7 @@ nicht zu verwechseln mit den normalen issue bugfix trackern, welches Ihre Securi
 als Entwurf an den Maintainer sendet, und welche, solange nicht von diesem veröffentlicht,
 nur ihm selbst und weiteren bestimmten Mitstreitern zugänglich ist.
 Sie sollten uns also Informationen hinterlassen, wie wir Sie eventuell erreichen können,
-um Weteres zu erfahren. Bitte halten Sie die Informationen über das gefundene
+um Weiteres zu erfahren. Bitte halten Sie die Informationen über das gefundene
 <em>“Loch”</em> möglichst genau, damit schnell die Ursache - möglichst anhand eines
 allgemeinen Beispieles - gefunden und gefixt werden kann.</p>
 
