book: Add link target in 7082bf92c465ccbc7db57f7c2e5af78227b18fce

--- a/book/index.html
+++ b/book/index.html
@@ -51786,8 +51786,8 @@ Wir reagieren meist innerhalb von 24 Stunden nachdem Sie mit uns in Kontakt
 getreten sind und sprechen mit Ihnen detailliert den weiteren Vorgang ab.</p>
 
 <p>Wenn Sie es vorziehen, und ist im Falle von Styx die einzig praktikable Methode,
-können Sie ein <a href="https://github.com/ophian/styx/security/advisories/new">GitHub Styx Security Issue</a> aufmachen,
-nicht zu verwechseln mit den normalen issue bugfix trackern, welches Ihre Security Meldung
+können Sie ein <a href="https://github.com/ophian/styx/security/advisories/new" target="_blank">GitHub Styx Security Issue</a> aufmachen,
+nicht zu verwechseln mit den normalen issue (Bugfix) trackern, welches Ihre Security Meldung
 als Entwurf an den Maintainer sendet, und welche, solange nicht von diesem veröffentlicht,
 nur ihm selbst und weiteren bestimmten Mitstreitern zugänglich ist.
 Sie sollten uns also Informationen hinterlassen, wie wir Sie eventuell erreichen können,
