book: Improve staticpage pagetype double glitch

--- a/book/index.html
+++ b/book/index.html
@@ -32411,8 +32411,8 @@ sind erlaubt.</span>
 <span class="tag-box invisible">
     <span class="inline-tag">Fehler!doppelte Seitentypen für statische Seiten</span>
 </span>
-Es kann vorkommen, wenn Sie das Plugin <span class="mbold">Statische Seiten</span> mehr als
-einmal installiert haben, dass Sie einige Seitentypen mehrfach in der
+Es kann vorkommen, wenn Sie das Plugin <span class="mbold">Statische Seiten</span> aufgrund eines Fehlers mehr als
+einmal installiert hatten, dass Sie einige Seitentypen mehrfach in der
 Liste sehen. Überflüssige, doppelte Seitentypen können Sie
 entweder manuell löschen oder einfach beibehalten, da dadurch keine
 Probleme entstehen.</p>
