--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1329,14 +1329,14 @@
     </div>
 
     <div id="serendipity_event_outdate_entries" class="plugin">
-        <h4 class="plugin_summary">Hide/delete entries for non-registered users after a specific timespan</h4>
+        <h4 class="plugin_summary">Hide/delete entries after a specific timespan</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_outdate_entries</dt>
-            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2022-06-15)</dd>
+            <dd class="plugin_version">Version 2.0.0 (GPL, Last Updated 2022-06-16)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">Hides all entries which are older than a specified age, so that they are only visible for registered users/authors.</p>
+        <p class="plugin_description">Hides all entries which are older than a specified age, so that they are only visible for registered users/authors. And similar more.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_outdate_entries.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_outdate_entries">GitHub</a></li>
