--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -476,7 +476,7 @@
         <h4 class="plugin_summary">Tagging of entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_freetag</dt>
-            <dd class="plugin_version">Version 5.19 (GPL, Last Updated 2022-04-18)</dd>
+            <dd class="plugin_version">Version 5.19 (GPL, Last Updated 2022-06-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Malte Paskuda, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1116,7 +1116,7 @@
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_userprofiles</dt>
-            <dd class="plugin_version">Version 1.3.2 (GPL, Last Updated 2022-04-24)</dd>
+            <dd class="plugin_version">Version 1.3.3 (GPL, Last Updated 2022-06-19)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Falk Doering, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.5</dd>
         </dl>
@@ -1216,7 +1216,7 @@
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_userprofiles</dt>
-            <dd class="plugin_version">Version 1.3.2 (GPL, Last Updated 2022-04-24)</dd>
+            <dd class="plugin_version">Version 1.3.3 (GPL, Last Updated 2022-06-19)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Falk Doering, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.5</dd>
         </dl>
@@ -1332,8 +1332,8 @@
         <h4 class="plugin_summary">Hide/delete entries after a specific timespan</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_outdate_entries</dt>
-            <dd class="plugin_version">Version 2.0.0 (GPL, Last Updated 2022-06-16)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking</dd>
+            <dd class="plugin_version">Version 2.0.0 (GPL, Last Updated 2022-06-17)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Hides all entries which are older than a specified age, so that they are only visible for registered users/authors. And similar more.</p>
