--- a/book/index.html
+++ b/book/index.html
@@ -7124,7 +7124,7 @@ der Plugins in den folgenden Kapiteln entnehmen.</span>
         (<span class="mbold">avif</span>) Dateien, wenn Sie Letztere über die Image
         Konfiguration selbst zur Nutzung erlaubt haben.
         Solche Dateien sind also nur als "interne Erweiterung" der Mediathek zu verstehen.
-        Sie selbst, als Backenduser, greifen nur indirekt auf diese zu, obwohl sie, woweit
+        Sie selbst, als Backenduser, greifen nur indirekt auf diese zu, obwohl sie, soweit
         vorhanden, überall wo ein Bild der Mediathek [*]
         <span class="footnote"><i class="fa fa-info-circle"></i> Auch die Template(s) Vorschau
         Bilder gehorchen bereits diesem neuen Prinzip.</span><!-- footnote --> im Backend
