book: Shorten authors plugin AUTHORS_ALLOW_SELECT for length

--- a/book/index.html
+++ b/book/index.html
@@ -16058,7 +16058,7 @@ liegt, tragen Sie im Konfigurationsfeld <code>bilder/MeinRSS.gif</code> ein.</sp
 </p>
 
 <p class="desc">
-<span class="item mbold">Ermöglicht Besuchern, Einträge mehrerer Autoren gleichzeitig darzustellen</span><!-- menuitem -->
+<span class="item mbold">Mehrfachauswahl von Autoren erlauben?</span><!-- menuitem -->
 <span class="desc-info">
     <span class="box">
         Ähnlich wie bei der Liste aller Kategorien, kann in der Liste aller
