book: Shorten some freetag plugin options (follows update)

--- a/book/index.html
+++ b/book/index.html
@@ -31317,7 +31317,7 @@ führt (siehe Seite <span class="pageref"><a href="#taglink">Taglink</a></span>)
 </p>
 
 <p class="desc">
-<span class="item mbold">Schriftgröße des Font-Tags je nach Popularität vergrößern</span><!-- menuitem -->
+<span class="item mbold">Schriftgröße der Tags nach Häufigkeit skalieren</span><!-- menuitem -->
 <span class="desc-info">Das Seitenleisten-Plugin kann die Schriftgröße der Tags je nach
 Einsatzhäufigkeit verändern. Häufig verwendete Tags erscheinen groß,
 selten eingesetzte kleiner. Dies erleichtert es dem Besucher, einen
@@ -31338,7 +31338,7 @@ Ausgabeliste begrenzt werden soll.</span>
 </p>
 
 <p class="desc">
-<span class="item mbold">Wie oft muss ein Tag vorkommen, damit er angezeigt wird</span><!-- menuitem -->
+<span class="item mbold">Mindest-Nutzung eines Tags für Anzeige</span><!-- menuitem -->
 <span class="desc-info">Wenn Sie sehr viele Tags in Ihrem Blog einsetzen, macht es wenig Sinn,
 jedes einzelne in der Seitenleiste aufzuführen. Daher können Sie diese
 Ausgabe auf populäre Tags beschränken und mithilfe der Option <span class="mbold">Wie
