book: Update for 3.9.0 releasse

--- a/book/index.html
+++ b/book/index.html
@@ -500,7 +500,7 @@
 
                     <div id="index" class="clearfix">
 
-<h2 class="ref noanli" id="serendipity-styx-3-8-mrz-2022"><span class="revision">Serendipity Styx 3.8, März 2022</span></h2>
+<h2 class="ref noanli" id="serendipity-styx-3-9-jul-2022"><span class="revision">Serendipity Styx 3.9, Juli 2022</span></h2>
 
 <section id="C0" class="chapter">
 <h2 id="prologue">Vorwort<a class="anchorjs-link" href="#prologue" aria-label="Anchor" data-anchorjs-icon=""></a></h2>
@@ -509,7 +509,7 @@
 
 <p>&nbsp;</p><!-- separator -->
 
-<p>Dies ist eine <strong>Neubearbeitung</strong> für <strong>Serendipity Styx 3.8</strong> und
+<p>Dies ist eine <strong>Neubearbeitung</strong> für <strong>Serendipity Styx 3.9</strong> und
 beruht auf meiner damaligen S9y-Origin "<em>Entwurfs</em>"-Revision für den Entwicklungsstand
 von Serendipity 2.1 (Alpha-Builds) aus dem Frühjahr 2016, Seit dem Spätsommer 2018 lag diese hier
 in einer aktuelleren Neubearbeitung für Styx 2.4 vor, welche jetzt erneut für die Styx 3er Series überarbeitet
@@ -582,7 +582,7 @@ sie ist!</p>
 <p>&nbsp;</p><!-- separator -->
 
 <p>Ian Styx, für die <strong>Serendipity Styx Edition</strong></p>
-<p>März 2022.</p>
+<p>Juli 2022.</p>
 
 <p>&nbsp;</p><!-- separator -->
 
@@ -657,7 +657,7 @@ und konsequent weiter. Seit 2003 war der Autor des ursprünglichen Buchtextes,
 Garvin Hicking, leitender Entwickler.</p>
 
 <p>Dieses Online-Buch bezieht sich auf die aktuelle
-<strong>Serendipity Styx</strong> Version <strong>3.8</strong> und möchte einen
+<strong>Serendipity Styx</strong> Version <strong>3.9</strong> und möchte einen
 umfassenden Überblick über das System und seine Anpassbarkeit
 vermitteln. Neben der Bedienung der Software werden Sie darum auch
 lernen, eigene Plugins zu schreiben, Templates anzupassen und
@@ -51728,7 +51728,7 @@ oder eine Nachricht in der Projekt-Issue- oder Projekt-Discussions-Datenbank hin
       Spartacus Themes</a> bzw <a href="/plugins">Styx Spartacus Plugins</a> erreichbar;
       Sie können von dort auch direkt heruntergeladen werden. (Siehe dortige Erklärung.)</li>
   <li>Das <span class="item mbold">neue</span> Buch für <span class="item mbold">Serendipity
-      Styx 3.8</span> aus <span class="item mbold">2022</span> lesen Sie hier ja bereits selbst.</li>
+      Styx 3.9</span> aus <span class="item mbold">2022</span> lesen Sie hier ja bereits selbst.</li>
 </ul>
 
 <p><span class="item mbold">Diskussion / Feature Requests</span></p>
