hc::shared-installation: Update example conf for more current apache servers

--- a/hc/en/shared-installation.html
+++ b/hc/en/shared-installation.html
@@ -120,6 +120,7 @@
     DocumentRoot /home/www/garvin.s9yblogs.org/htdocs
     &lt;Directory "/home/www/garvin.s9yblogs.org/htdocs"&gt;
         AllowOverride All
+        Require all granted
     &lt;/Directory&gt;
     php_value include_path ".:/usr/local/lib/php:/usr/local/lib/php/s9y/:/usr/local/lib/php/s9y/bundled-libs/"
     php_admin_value open_basedir "/usr/local/lib/php/:/usr/local/lib/php/s9y/:/home/www/garvin.s9yblogs.org/"
@@ -130,6 +131,7 @@
     DocumentRoot /home/www/j.s9yblogs.org/htdocs
     &lt;Directory "/home/www/j.s9yblogs.org/htdocs"&gt;
         AllowOverride All
+        Require all granted
     &lt;/Directory&gt;
     php_value include_path ".:/usr/local/lib/php:/usr/local/lib/php/s9y/:/usr/local/lib/php/s9y/bundled-libs/"
     php_admin_value open_basedir "/usr/local/lib/php/:/usr/local/lib/php/s9y/:/home/www/j.s9yblogs.org/"
@@ -140,6 +142,7 @@
     DocumentRoot /home/www/tom.s9yblogs.org/htdocs
     &lt;Directory "/home/www/tom.s9yblogs.org/htdocs"&gt;
         AllowOverride All
+        Require all granted
     &lt;/Directory&gt;
     php_value include_path ".:/usr/local/lib/php:/usr/local/lib/php/s9y/:/usr/local/lib/php/s9y/bundled-libs/"
     php_admin_value open_basedir "/usr/local/lib/php/:/usr/local/lib/php/s9y/:/home/www/tom.s9yblogs.org/"
