--- a/themes/index.html
+++ b/themes/index.html
@@ -97,6 +97,8 @@
                         <li class="core-themes"><a href="#2k11">2k11</a></li>
                         <li class="core-themes"><a href="#styx">Styx [backend] [Standard]</a></li>
                         <li class="core-themes"><a href="#b46">B46 [Black Edition]</a></li>
+                        <li class="core-themes"><a href="#b5blog">B5blog</a></li>
+                        <li class="core-themes"><a href="#boot">Boot [Take 5 Pool}</a></li>
                         <li class="core-themes"><a href="#bootstrap">Bootstrap 4</a></li>
                         <li class="core-themes"><a href="#cleanblog">Clean Blog</a></li>
                         <li class="core-themes"><a href="#default">Default [backend & fallback]</a></li>
@@ -133,7 +135,7 @@
                     <h1>Styx <span class="icon-s">Ⓢ</span><span class="hidden">S</span>partacus: Themes</h1>
                     <p><strong>SPARTACUS</strong> stands for<br><em>Serendipity Plugin Access Repository Tool And Customization/Unification System</em></p>
                     <p><span>[<strong>S</strong>]erendipity [<strong>P</strong>]lugin [<strong>A</strong>]ccess [<strong>R</strong>]epository [<strong>T</strong>]ool [<strong>A</strong>]nd [<strong>C</strong>]ustomization/[<strong>U</strong>]nification [<strong>S</strong>]ystem</span></p>
-                    <p><strong>PLEASE NOTE:</strong><br>This <strong>preview</strong> page is equal with Serendipity <strong>Styx 3.3.0</strong> revision, from 2021, February 28th.</p>
+                    <p><strong>PLEASE NOTE:</strong><br>This <strong>preview</strong> page is equal with Serendipity <strong>Styx 3.9.1</strong> revision, from 2022, July 31st.</p>
                     <p><em>Singular (additional) theme downloads are possible, via their download link.</em></p>
                     <p>&nbsp;</p>
                     <div class="spartacus-group">
