--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -20,11 +20,11 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.3 (GPL, Last Updated 2022-07-31)</dd>
+            <dd class="plugin_version">Version 1.9.4 (GPL, Last Updated 2022-08-11)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate Notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
+        <p class="plugin_description">When the Serendipity Backend (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the Blog directly with one click from within the administration area. It is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_autoupdate.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_autoupdate">GitHub</a></li>
@@ -864,11 +864,11 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.3 (GPL, Last Updated 2022-07-31)</dd>
+            <dd class="plugin_version">Version 1.9.4 (GPL, Last Updated 2022-08-11)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate Notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
+        <p class="plugin_description">When the Serendipity Backend (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the Blog directly with one click from within the administration area. It is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_autoupdate.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_autoupdate">GitHub</a></li>
@@ -1016,11 +1016,11 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.3 (GPL, Last Updated 2022-07-31)</dd>
+            <dd class="plugin_version">Version 1.9.4 (GPL, Last Updated 2022-08-11)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate Notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
+        <p class="plugin_description">When the Serendipity Backend (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the Blog directly with one click from within the administration area. It is recommended to use it in combination with the modemaintain (maintenance-) event plugin. For Autoupdate notifications you have to enable the global Serendipity configuration option in &quot;Configuration:: General Settings: Update notification&quot; to &quot;stable&quot; or &quot;beta&quot; to use and get notifications at all!</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_autoupdate.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_autoupdate">GitHub</a></li>
